--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@
 }
 
 body {
-  font-family: var(--primery-font);
+  font-family: "Roboto", sans-serif;
   color: #434455;
   background-color: #ffffff;
 }
