--- a/css/styles.css
+++ b/css/styles.css
@@ -50,19 +50,22 @@ body {
   color: #404bbf;
 }
 
+.contsct {
+  font-style: normal;
+}
 
 .contack-link {
   font-size: 16px;
   font-weight: 400;
-  line-height: 1.15;
-  font-style: normal;
+  line-height: 1.5;
   letter-spacing: 0.02em;
   color:#434455;
 }
 
 .contack-link:hover,
-.contack-link:focus, {
+.contack-link:focus {
   color: #404bbf;
 }
+
 
 
