--- a/css/styles.css
+++ b/css/styles.css
@@ -54,10 +54,11 @@ body {
 
 .menu-link:hover,
 .menu-link:focus {
-  color: #4d5ae5;
+  color: #404bbf;
 }
 
 .contack-link {
+  font-style: normal;
   font-size: 16px;
   font-weight: 400;
   line-height: 1.5;
@@ -68,7 +69,7 @@ body {
 
 .contack-link:hover,
 .contack-link:focus {
-  color: #4d5ae5;
+  color: #404bbf;
 }
 
 .hero {
@@ -141,7 +142,7 @@ body {
   text-transform: capitalize;
 }
 
-.team-list {
+.team-item {
   background-color: #FFFFFF ;
 }
 
